[gd_scene load_steps=4 format=2]

[ext_resource path="res://KinematicBody2D.gd" type="Script" id=2]
[ext_resource path="res://KinematicBody2D/player_spriteframes.tres" type="SpriteFrames" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 39.7697
height = 48.4962

[node name="player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.769714, -0.482178 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 3 )
animation = "jump"
playing = true

[node name="WallRaycasts" type="Node2D" parent="."]

[node name="LeftWallRaycasts" type="Node2D" parent="WallRaycasts"]

[node name="LeftWallRaycast" type="RayCast2D" parent="WallRaycasts/LeftWallRaycasts"]
position = Vector2( 0, 30 )
enabled = true
cast_to = Vector2( -50, 0 )

[node name="LeftWallRaycast2" type="RayCast2D" parent="WallRaycasts/LeftWallRaycasts"]
position = Vector2( 0, -30 )
enabled = true
cast_to = Vector2( -50, 0 )

[node name="RightWallRaycasts" type="Node2D" parent="WallRaycasts"]

[node name="RightWallRaycast" type="RayCast2D" parent="WallRaycasts/RightWallRaycasts"]
position = Vector2( 0, 30 )
enabled = true
cast_to = Vector2( 50, 0 )

[node name="RightWallRaycast2" type="RayCast2D" parent="WallRaycasts/RightWallRaycasts"]
position = Vector2( 0, -30 )
enabled = true
cast_to = Vector2( 50, 0 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
